--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,6 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-# Goland stuff
+# Goland & Golang stuff
 .idea/
+pkg/
